apps/base/matomo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: matomo
spec:
  selector:
    app.kubernetes.io/name: matomo
  ports:
    - name: http
      port: 80
      targetPort: 80
